--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
     <title>后台管理系统</title>
   </head>
   <body>
+    <script
+      type="text/javascript"
+      src="https://api.map.baidu.com/getscript?v=2.0&ak=nSxiPohfziUaCuONe4ViUP2N&services=&t=20211027151433"
+    ></script>
+    <script
+      type="text/javascript"
+      src="%PUBLIC_URL%/echarts-3.8.5.min.js"
+    ></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/echarts-bmap.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
