--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,12 @@
     <title>后台管理系统</title>
   </head>
   <body>
+    <script type="text/javascript">
+      window.HOST_TYPE = '2'
+    </script>
     <script
       type="text/javascript"
-      src="https://api.map.baidu.com/getscript?v=2.0&ak=nSxiPohfziUaCuONe4ViUP2N&services=&t=20211027151433"
+      src="https://api.map.baidu.com/getscript?v=2.0&ak=nSxiPohfziUaCuONe4ViUP2N&services=&t=20211027151433&s=1"
     ></script>
     <script
       type="text/javascript"
